﻿Subtitle Edit Changelog


3.5.6 (xth March 2018) BETA
* NEW:
   * Some support for SMPTE time code (drop frame) in video player
   * Swap text up/down - thx Leon
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Hungarian translation - thx ZityiSoft Team
   * Update Korean translation - thx domddol
   * Waveform insert sub now works not just at end - thx Leon
   * Allow larger "margin" in SSA/ASSA styles - thx von Suppé
* FIXED:
   * Fix Ctrl+v of time code in "Time code control" (regr. from 3.5.5) - thx Mohammed
   * Fix for format "TTML draft 2006-10" - thx thehulk
   * Fix issue regarding "Binary image compare OCR ext. matches" - thx SimplyTheBOSS
   * Fix issue regarding "Bridge gaps"/selected line - thx btsix
   * Fix new-line char in "Replace -> Replace with" text box - thx Leon


3.5.5 (26th January 2018)
* NEW:
   * Add new subtitle format - thx Karim
   * Add new subtitle format - thx Wojtek
   * Add new subtitle format - thx yumiko
   * Add new subtitle format - thx Frank
   * Add support for fcpxml 1.6 - thx Julius
   * Add sync options when re-exporting image formats - thx Music Fan
   * Add new shortcuts - thx darnn
   * Add shortcut "Go to prev scene change" shortcut - thx Ingo
   * Add more image based formats to batch/cmd-line convert
   * Add advanced fcpxml 1.5 export
   * New plain text import format "Final Draft Template" - thx Wolfgang
* IMPROVED:
   * Update Bulgarian translation - thx Maknol
   * Update Hungarian translation - thx ZityiSoft Team
   * Update French translatin - thx JM GBT
   * Update Portuguese translation - thx moob
   * Update Polish translation - thx admas
   * Update Dutch translation - thx René
   * Update Korean translation - thx domddol
   * Update Simplified Chinese translation - thx Leon
   * Update Russian translation - thx Elheym
   * Add sort by "Actor" - thx von Suppé
   * Add "Description" to "multiple replace" rules
   * Add "Apply" button to "Multiple replace" - thx Finduilas