@@ -461,6 +461,7 @@ Note: Do check free disk space.</WaveFileMalformed>
     <Left>Left</Left>
     <Right>Right</Right>
     <Center>Center</Center>
+    <CenterLeftJustify>Center, left justify</CenterLeftJustify>
     <BottomMargin>Bottom margin</BottomMargin>
     <LeftRightMargin>Left/right margin</LeftRightMargin>
     <SaveBluRraySupAs>Choose Blu-ray sup file name</SaveBluRraySupAs>
